<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KNGame_SDK_Project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tips_1">账号必须以字母开头</string>
    <string name="tips_2">账号不能为空</string>
    <string name="tips_3">玩家账号只能含有数字、字母或一些特殊符号,大小在6-25位字符</string>
    <string name="tips_4">账号长度必须在6~25位</string>
    <string name="tips_5">密码长度必须在6~20位</string>
    <string name="tips_6">修改密码中,请稍等...</string>
    <string name="tips_7">旧密码不能为空</string>
    <string name="tips_8">密码不能为空</string>
    <string name="tips_9">登录中，请稍等...</string>
    <string name="tips_10">登录成功!</string>
    <string name="tips_11">登录失败!</string>
    <string name="tips_12">删除账号失败</string>
    <string name="tips_13">删除账号成功</string>
    <string name="tips_14">注册中，请稍等...</string>
    <string name="tips_15">注册成功</string>
    <string name="tips_16">SDK还未初始化</string>
    <string name="tips_17">登录后才能支付</string>
    <string name="tips_18">修改密码</string>
    <string name="tips_19">账　号 :</string>
    <string name="tips_20">请输入账号</string>
    <string name="tips_21">密　码 :</string>
    <string name="tips_22">请输入旧密码</string>
    <string name="tips_23">新密码:</string>
    <string name="tips_24">请输入新密码</string>
    <string name="tips_25">确定</string>
    <string name="tips_26">返回</string>
    <string name="tips_27">登录</string>
    <string name="tips_28">一键注册登录</string>
    <string name="tips_29">登录游戏</string>
    <string name="tips_30">注册账号</string>
    <string name="tips_31">请输入密码</string>
    <string name="tips_32">数据加载中……</string>
    <string name="tips_33">注册</string>
    <string name="tips_34">请检查网络是否连接</string>
    <string name="tips_35">忘记密码？</string>
    <string name="tips_36">注册新账号</string>
    <string name="tips_37">游客登录</string>
    <string name="tips_38">土豪金有钱，酷牛游戏欢迎您 !</string>
    <string name="tips_39">，酷牛游戏欢迎您 ! </string>
    <string name="tips_40"> 你当前登录为游客身份，为保证账\n号安全请绑定账号 </string>
    <string name="tips_41"> 登 录 游 戏 (5) </string>
    <string name="tips_42">账号管理</string>
    <string name="tips_43">切换账号</string>
    <string name="tips_44">绑定手机</string>
    <string name="tips_45">绑定手机可更好保证您的账号安全</string>
    <string name="tips_46">手机号 : </string>
    <string name="tips_47">验证码 : </string>
    <string name="tips_48">获取验证码</string>
    <string name="tips_49">立即注册</string>
    <string name="tips_50">已有账号、登录</string>
    <string name="tips_51">找回密码</string>
    <string name="tips_52">忘记密码</string>
    <string name="tips_53">忘记账号</string>
    <string name="tips_54">新密码</string>
    <string name="tips_55">立即绑定账号</string>
    <string name="tips_56">绑定账号</string>
    <string name="tips_57">手机号码格式错误</string>
    <string name="tips_58">手机号码不能为空</string>
    <string name="tips_59">获取设备号失败，游客无法登录</string>
    <string name="tips_60">使用其他账号登录</string>
    <string name="tips_61">已有账号登录</string>
    <string name="tips_62">选择登录方式</string>
    <string name="tips_63">新用户注册</string>
    <string name="tips_64">请确认密码</string>
    <string name="tips_65">密码不一致</string>
    <string name="tips_66">找回账号</string>
    <string name="tips_67">下一步</string>
    <string name="tips_68">亲爱的游客，未绑定手机模式无法保证\n游戏数据的安全，删除游戏、更换设备\n等都有可能被清除，为保障您的虚拟财\n产安全，强烈建议您绑定手机</string>
    <string name="tips_69">继续游戏</string>
    <string name="tips_70">快速注册</string>
    <string name="tips_71">用户名注册</string>
    <string name="tips_72">手机注册</string>
    <string name="tips_73">系统已经自动分配账号,为了方便记忆,可自行设置</string>
    <string name="tips_74">我已阅读并同意</string>
    <string name="tips_75">《萌创天成用户协议》</string>
    <string name="tips_76">注册并进入游戏</string>
    <string name="tips_77">\u3000\u3000游客模式无法进行充值操作，为减少您在后续游戏过程中受到损失,避免后续游客模式可能无法登录游戏的情况,请尽快升级成萌创账号,保证自身权益。</string>
    <string name="tips_78">手机号或6-25位字母+数字组合</string>
    <string name="tips_79">请输入手机号或者萌创账号</string>
    <string name="tips_80">快速注册</string>
    <string name="tips_81">请再次输入密码</string>
    <string name="tips_82">请输入验证码</string>
    <string name="tips_83">获取验证码</string>
    <string name="tips_84">确定</string>
    <string name="tips_85">立即注册</string>
    <string name="tips_86">重新输入</string>
    <string name="tips_87">绑定手机</string>
    <string name="tips_88">确认登记并进入游戏</string>
    <string name="tips_89">完成手机绑定后，您可直接使用手机号登录</string>
    <string name="tips_90">\u3000\u3000您的账号1信息尚未完善，请尽快补充完整以保证账号的安全。</string>
    <string name="tips_91">下次再说</string>
    <string name="tips_92">立即设置</string>
    <string name="tips_93">你可以通过以下方式找回密码：</string>
    <string name="tips_94">通过手机号找回</string>
    <string name="tips_95">确定</string>
    <string name="tips_96">账号验证</string>
    <string name="tips_97">通过邮箱找回</string>
    <string name="tips_98">升级手机号通行证，需要进行验证</string>
    <string name="tips_100">手机号码或账号不能为空</string>

</resources>
