<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <!-- 添加底层布局 -->
    <LinearLayout
        android:id="@+id/account_manager_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/first_login">
        <LinearLayout 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_gravity="center"
          android:orientation="vertical">
                      <RelativeLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">
                 <EditText 
	                 android:id="@+id/account_et"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:layout_gravity="center_vertical"
	                 android:background="@drawable/account"
					 android:hint="请输入您要登录的账号"
	                 android:imeOptions="actionDone"
	                 android:maxLength="12"
	                 android:paddingLeft="90dp"
	                 android:singleLine="true"
	                 android:textColor="@android:color/white"
	                 android:textColorHint="@color/text_color_white"
	                 android:textSize="15dp"/> 
	                 <TextView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:paddingLeft="15dp"
	                    android:paddingTop="5dp"
	                    android:text="@string/tips_19"/>  
            </RelativeLayout>
            <RelativeLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">
	            <EditText 
	                 android:id="@+id/password__et"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:layout_gravity="center_vertical"
	                 android:background="@drawable/account"
					 android:hint="请输入密码"
					 android:password="true"
					 android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@-_#@`~,.?/|\"
	                 android:imeOptions="actionDone"
	                 android:maxLength="16"
	                 android:paddingLeft="90dp"
	                 android:singleLine="true"
	                 android:textColor="@android:color/white"
	                 android:textColorHint="@color/text_color_white"
	                 android:textSize="15dp"/> 
	                 <TextView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:paddingLeft="15dp"
	                    android:paddingTop="5dp"
	                    android:text="@string/tips_21"/>  
            </RelativeLayout>
	        <RelativeLayout 
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_marginLeft="25dp"
	             android:layout_marginTop="2dp"
	             android:layout_marginRight="25dp"
	             android:orientation="horizontal">
		         <TextView
		             android:id="@+id/forget_passwor" 
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:layout_gravity="center_vertical"
		             android:paddingTop="1dp"
		             android:paddingLeft="180dp"
		             android:textColor="@color/text_color_forget_password"
		             android:text="@string/tips_35"/>  
	        </RelativeLayout>
	        <RelativeLayout 
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_marginTop="2dp"	             
	             android:layout_gravity="center_horizontal"
	             >
		         <Button 
                    android:id="@+id/regist_now"
                    android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                	android:background="@color/btn_submit_selector"
                	android:text="@string/tips_27"
                	android:textColor="@color/text_color_white"
                 />
		         <Button 
	                android:id="@+id/login_now"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="35dp"
	                android:background="@color/btn_other_selector"
	                android:text="@string/tips_36"
	                android:textColor="@color/text_color_white"
                 />
	        </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
