<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:gravity="center"
    android:id="@+id/visit_dialog"
    >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="10dp"

            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="提示"
                android:textColor="@color/kn_selecte_log"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/ts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="9dp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/tips_90"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/kn_text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            >

            <Button

                android:id="@+id/visit_bind_account"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/select_dialog"
                android:text="@string/tips_91"
                android:textColor="#5CACEE"
                android:layout_weight="1"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/kn_text"
                />

            <Button
                android:id="@+id/visit_continue"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/select_dialog"
                android:text="@string/tips_92"
                android:textColor="#5CACEE"
                android:layout_weight="1"
                />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>